--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="form-group mt-3">
               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
             </div>
-            <div class="text-center"><a class="submit" href="mailto:name@email.com">CONTACT ME</a></div>
+            <div class="text-center"><a class="submit" href="mailto:prashanthkavali15@gmail.com">CONTACT ME</a></div>
           </form>
           <div class="contact-about">
             <div class="social-links">
@@ -379,10 +379,6 @@
         &copy; Copyright <strong><span>Prashanth</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-lonely/ -->
         Designed by Prashanth
       </div>
     </div>
