--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <h4>TinDog</h4>
               </div>
               <div class="portfolio-links">
-                <a href="Images/3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i
+                <a href="Images/3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="TinDog Website"><i
                     class="bx bx-plus"></i></a>
                 <a href="https://prashanthkavali.github.io/Tin-Dog/"><i class="bx bx-link"></i></a>
               </div>
@@ -293,7 +293,7 @@
                 <h4>Style Editor</h4>
               </div>
               <div class="portfolio-links">
-                <a href="Images/5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i
+                <a href="Images/5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Style Editor"><i
                     class="bx bx-plus"></i></a>
                 <a href="https://prashanthkavali.github.io/Style_Editor/"><i class="bx bx-link"></i></a>
               </div>
@@ -307,7 +307,7 @@
                 <h4>Drum Kit</h4>
               </div>
               <div class="portfolio-links">
-                <a href="Images/4.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
+                <a href="Images/4.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Drum Kit"><i
                     class="bx bx-plus"></i></a>
                 <a href="https://prashanthkavali.github.io/Drum-Kit/"><i class="bx bx-link"></i></a>
               </div>
@@ -321,7 +321,7 @@
                 <h4>Dice Game</h4>
               </div>
               <div class="portfolio-links">
-                <a href="Images/6.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i
+                <a href="Images/6.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Dice Game"><i
                     class="bx bx-plus"></i></a>
                 <a href="https://prashanthkavali.github.io/Dice-Game/"><i class="bx bx-link"></i></a>
               </div>
