--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <h1>Hi, I'm Prashanth!</h1>
-    <h2>I am a Programmer</h2>
+    <h2>I am a 
+      <span class="type-text" data-wait="1000" data-words='["Programmer","Web Developer","Computer Science Student"]'></span>
+    </h2>
     <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
   </section><!-- End Hero -->
 
@@ -39,8 +41,6 @@
 
       <div class="logo">
         <h1><a href="index.html">Prashanth</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
