--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>About</h3>
               <p>
-                An undergrad in National Institute of Technology, pursuing a Bachelor of Technology in department of
+                An undergrad in National Institute of Technology, pursuing Bachelor of Technology in department of
                 Computer Science and Engineering. Ardent interest in Coding, Web and Flutter development.
               </p>
             </div><!-- End .content-->
